--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h2 style="text-align: center;">Welcome to my site!</h2>
 
-<body bgcolor = "LightGreen">
+<body bgcolor = "DarkPurple">
 
 <p><strong>About Me</strong></p>
 
