--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@
 
 <p><strong>About Me</strong></p>
 
-<p>This is a new paragraph! <br /><br /></p>
+<p>I am a first year business student at The Univeristy of Texas at Austin! 
+   Currently, my vested interest is in pursuing a career in Accounting. 
+   If the picture did not show it, I am a bhangra dancer on Texas Bhangra!<br /><br /></p>
