--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is Aron!</h1>
+<h1>This is Aron, welcome to my page!</h1>
 
 </body>
 </html>
@@ -12,7 +12,7 @@
 
 <p style="text-align: center;"><a href="https://www.kodak.com/corp/default.htm">Click Here</a> to go to my favorite site</p>
 
-<h1 style="text-align: center;">My name is Pitbull</h1>
+<h1 style="text-align: center;">Aron Bhachawat</h1>
 
 <h2 style="text-align: center;">Welcome to my site!</h2>
 
