--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <center><img src="MisPic.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
 
-<p style="text-align: center;"><a href="https://www.youtube.com">My favorite website:</a> </p>
+<p style="text-align: center;"><a href="https://www.youtube.com">Click here for my favorite website!</a> </p>
 
 <h1 style="text-align: center;">Aron Bhachawat</h1>
 
