--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <h1 style="text-align: center;">Aron Bhachawat</h1>
 
-<h2 style="text-align: center;">Welcome to my site!</h2>
+<h2 style="text-align: center;">Welcome to my site, read a little about me and stare in awe at my photo!</h2>
 
 <body bgcolor = "Orange">
 
-<p><strong>About Me</strong></p>
+<p><strong>About Me:</strong></p>
 
 <p>I am a first year business student at The Univeristy of Texas at Austin! 
    Currently, my vested interest is in pursuing a career in Accounting. 
