--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is Aron, welcome to my page!</h1>
+<h1 style="text-align: center;">This is Aron, welcome to my page!</h1>
 
 </body>
 </html>
@@ -9,8 +9,6 @@
 <p>&nbsp;</p>
 
 <center><img src="MisPic.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
-
-<p style="text-align: center;"><a href="https://www.youtube.com">Click here for my favorite website!</a> </p>
 
 <h1 style="text-align: center;">Aron Bhachawat</h1>
 
@@ -23,3 +21,5 @@
 <p>I am a first year business student at The Univeristy of Texas at Austin! 
    Currently, my vested interest is in pursuing a career in Accounting. 
    If the picture did not show it, I am a bhangra dancer on Texas Bhangra!<br /><br /></p>
+   
+<p style="text-align: center;"><a href="https://www.youtube.com">Click here for my favorite website!</a> </p>
